src/assets/App.css
/*Global*/

    * {
    	font-family: 'Alegreya Sans SC', sans-serif;
    	font-weight: 100;
    }
    body {
    	color: #dddddd;
    	font-family: 'Alegreya Sans SC', sans-serif;
    	margin: 0 auto;
    	position: relative;
    	background-color: #0f131c;
    }
    #maxContainer {
      width: 100%;
    }
    h1 {
    	text-align: center;
    	font-weight: 100;
    }
    p {
    	font-family: 'Alegreya Sans';
    	color: #dddddd;
    	text-align: justify;
    	font-size: 80%;
    }
    #logo a {
    	text-decoration: none;
    	color: #ffffff;
    }
    a:link {
    	text-decoration: none;
    }
    ul {
      padding: 0px;
      list-style-type: none;
      margin: 0px;
    }

    a {
      color: inherit;
      text-decoration: none;
    }
    #comingSoon {
      font-size: 200%;
    	text-align: center;
    	line-height: 100%;
    	margin: 10px;
    	padding: 0px;
    	font-family: 'Alegreya Sans SC', sans-serif;
      width: 100%;
    }

/*End Global*/



/*Media Queries*/

  /*#loginContainer {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    overflow: hidden;
    display: flex;
    align-items: stretch;
    flex-direction: column;
    width: 99%;
    border: 1px solid #00dcff;
    border-width: 0px 0px;
    min-height: 99%;
    color: red !important;
}*/

@media screen and (max-width: 600px) {
  /*Login Page*/
  #fullProblem, #fullSolution {
    width: 100% !important;
  }
  #loginContainer {
    flex-direction: column !important;
    background-color: green;
  }
  #introduction {
    width: 100%;
    display: none;
  }
  /*Welcome Page*/
  #welcomeBox {
    margin: 0 auto !important;
  }
  /*Header*/
  #headerName {
    display: none !important;
  }
  /*Problem Page*/
  #voteSolution, #followProblem {
    width: 100px !important;
    /*margin-left: 0px auto !important;*/
    padding-left: 15px !important;
    /*text-align: center !important;*/
  }
  #parentButton {
    flex: 0 1 auto;
    margin-right: auto;
    margin-top: 1px;
    width: 31% !important;
    text-align: right;
  }
}

/*End Media Queries*/



/*ORGANIZED BY COMPONENT*/



/*Answer and Question*/

    #sidebarElements {
      border: 1px solid #00dcff;
      border-width: 0px 1px;
      padding-left: 10px;
      padding-right: 10px;
    }
    #questionProblem fieldset {
    	border: 1px solid #00dcff;
    }
    #questionProblem legend {
    	padding: 0.2em 0.5em;
    	border: 1px solid #00dcff;
    	font-size: 90%;
    	text-align: justify;
    }
    #questionUnit {
    	display: -webkit-box;
    	display: -moz-box;
    	display: -ms-flexbox;
    	display: -webkit-flex;
    	display: flex;
    	flex-direction: row;
    	font-family: 'Alegreya Sans';
    	padding-top: 10px;
    	width: 100%;
    }
    #questionContent {
    	flex: 3 3 auto;
    	font-family: 'Alegreya Sans';
    	border: 1px solid #00ffdc;
    	border-width: 1px 0px 0px 0px;
    	width: 80%;
    	padding: 10px;
    }
    #questionAdder {
      font-size: 90%;
      color: #00ffdc;
    }
    #answerAdder {
      font-size: 90%;
      color: #00dcff;
    }
    #questionAnswers {
      flex: 1 1 auto;
      color: #00dcff;
      background-color: #0f131c;
      border: 1px solid #00dcff;
      border-radius: 2px;
      cursor: pointer;
      height: 100%;
    }
    #questionAnswers:hover {
      color: #0f131c;
      background-color: #00dcff;
      cursor: pointer;
    }
    #questionAnswers:active {
      color: #00dcff;
      background-color: #0f131c;
    }
    #questionVote {
      flex: 1 1 auto;
      color: #00ffdc;
      background-color: #0f131c;
      border: 1px solid #00ffdc;
      border-radius: 2px;
      cursor: pointer;
    }
    #questionVote:hover {
      color: #0f131c;
      background-color: #00ffdc;
      cursor: pointer;
    }
    #questionVote:active {
      color: #00ffdc;
      background-color: #0f131c;
    }
    /*#flagContainer {
      flex: 1 1 auto;
      height: 100%;
      display: flex;
    	flex-direction: column;
      border: 1px solid #00ffdc;
      border-width: 1px 0px 0px 0px;
    }*/
    #flagSBButton, #editSBButton {
      flex: 1 1 auto;
      color: #00ffdc;
      background-color: #0f131c;
      border: 1px solid #00ffdc;
      border-radius: 2px;
      cursor: pointer;
      flex-grow: 1;
      height: 100%;

      /*Button to Div CSS*/
      text-align: center;
      font-size: 71%;
      padding: 2px;
    }
    #deleteLogo {
      /*border: 1px solid #ff7f7f;
    	border-radius: 50%;*/
      display: block;
      margin: 0 auto;
      vertical-align: middle;
    }

    #flagSBButton {
      color: #ff7f7f;
      border: 1px solid #ff7f7f;
      /*OR #fc5353*/
      margin: 1px;
      padding: 3px;
    }
    #flagSBButton:hover {
      color: #0f131c !important;
      background-color: #ff7f7f;
      cursor: pointer;
    }
    #editSBButton:hover {
      color: #0f131c;
      background-color: #00ffdc;
      cursor: pointer;
    }
    #flagSBButton:active {
      color: #ff7f7f;
      background-color: #0f131c;
    }    
    #editSBButton:active {
      color: #00ffdc;
      background-color: #0f131c;
    }

    #answerProblem fieldset {
      border: 1px solid #00dcff;
    }
    #answerProblem legend {
      padding: 0.2em 0.5em;
      border: 1px solid #00dcff;
      font-size: 90%;
      text-align: justify;
    }
    #answerUnit {
      display: -webkit-box;
      display: -moz-box;
      display: -ms-flexbox;
      display: -webkit-flex;
      display: flex;
      flex-direction: row;
      font-family: 'Alegreya Sans';
      padding-top: 10px;
      width: 100%;
    }
    #answerContent {
    	flex: 3 3 auto;
    	font-family: 'Alegreya Sans';
    	border: 1px solid #00dcff;
    	border-width: 1px 0px 0px 0px;
    	width: 80%;
    	padding: 10px;
    	margin-left: 8%;
    }
/* ... */

